--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@ function carousel() {
 आवाज़ है,आवाज़ की l<br>
   	</p>	
   </div>
- <video width="320" height="240" controls id="video2">
-  <source src="v2.mp4" type="video/mp4"></video>
+ <iframe width="320" height="240" controls id="video2" src="https://www.youtube.com/embed/PLkV09ueAG4">
 </body>
 </HEAD>
