--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@ function carousel() {
 आवाज़ है,आवाज़ की l<br>
   	</p>	
   </div>
- <iframe width="320" height="240" controls id="video2" src="https://www.youtube.com/embed/PLkV09ueAG4">
+	<div id="video2" data-plyr-provider="youtube" data-plyr-embed-id="PLkV09ueAG4"></div>
 </body>
 </HEAD>
