--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ function carousel() {
   setTimeout(carousel, 2000); 
 }
 </script>
-<a href="https://www.youtube.com/watch?v=f_YoO2Qs900" id="video" target="_blank"><img src="video1.png" ></a>
+<a href="https://www.youtube.com/watch?v=f_YoO2Qs900" id="video" target="_blank"><img src="video1.PNG" ></a>
   <div id="poem1">
   	<p>
   		वो आवाज़ थी, आवाज़ की <br>
@@ -200,7 +200,7 @@ function carousel() {
 आवाज़ है,आवाज़ की l<br>
   	</p>	
   </div>
- <a href="https://www.youtube.com/watch?v=PLkV09ueAG4" id="video2" target="_blank"><img src="video2.png" ></a>
+ <a href="https://www.youtube.com/watch?v=PLkV09ueAG4" id="video2" target="_blank"><img src="video2.PNG" ></a>
  <div id="myDIV" class="header">
   <h2 style="margin:5px" id="h2">PLEASE ENTER YOUR MEMORIES</h2>
   <input type="text" id="myInput" placeholder="CREATE A MEMORY LANE...">
