--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <style>
 body{
-	background: url(bgfinal.PNG) repeat-y #A8FD9B;
+	background: #A8FD9B url(bgfinal.PNG) repeat-y;
 }
 
 .mySlides {display:none;}
