--- a/index.html
+++ b/index.html
@@ -290,8 +290,9 @@ function newElement() {
     }
   }
 }
+	<script>
 	<div class="container">
   <div class="circle">जय आवाज़</div>
-</script>
+
 </body>
 </HEAD>
