--- a/index.html
+++ b/index.html
@@ -289,10 +289,8 @@ function newElement() {
       div.style.display = "none";
     }
   }
-}
-	<script>
+}	<script>
 	<div class="container">
-  <div class="circle">जय आवाज़</div>
-
+  <div class="circle">जय आवाज़</div></div>
 </body>
 </HEAD>
