--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ input {
   left: 610px;
   width: 380px;
  }
-	@keyframe loading {
+	 @keyframe loading {
    0%   {opacity: 0.9; left: 0px; top: 1050px;}
   25%  {opacity: 0.7; left: 50px; top: 1100px;}
   50%  {opacity: 0.5; left:  0px; top: 1100px;}
@@ -167,7 +167,6 @@ input {
   align-items: center;
   justify-content: center;
 }
-
 </style>
 </head>
 <body>
@@ -289,7 +288,8 @@ function newElement() {
       div.style.display = "none";
     }
   }
-}	<script>
+}
+</script>
 	<div class="container">
   <div class="circle">जय आवाज़</div></div>
 </body>
